...
                                    <subviews>
                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c8K-nB-SJk">
                                            <rect key="frame" x="149.5" y="0.0" width="75" height="42"/>
                                            <constraints>
                                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="75" id="WpS-i5-24O"/>
                                            </constraints>
                                            <state key="normal" title="Save"/>
                                            <connections>
                                                <action selector="saveButtonTapped:" destination="1Ze-AO-7pk" eventType="touchUpInside" id="pFX-Kk-Wjl"/>
                                            </connections>
                                        </button>
                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WJE-Oa-XW1">
                                            <rect key="frame" x="0.0" y="42" width="375" height="1"/>
...
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gR0-tG-TEE">
                                                    <rect key="frame" x="315" y="0.0" width="60" height="106.5"/>
                                                    <color key="backgroundColor" red="0.792156862745098" green="0.0" blue="0.26873405612244899" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                    <constraints>
                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="60" id="Cd4-7u-4HZ"/>
                                                    </constraints>
                                                    <state key="normal" title="Delete">
                                                        <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                                    </state>
                                                    <connections>
                                                        <action selector="deleteButtonTapped:" destination="Ube-V0-Hx7" eventType="touchUpInside" id="tdz-dh-dv3"/>
                                                    </connections>
                                                </button>
...
                            <constraint firstItem="ACq-Ih-m8b" firstAttribute="centerX" secondItem="wLP-7S-QJ8" secondAttribute="centerX" id="eWz-dC-M2i"/>
                            <constraint firstItem="wLP-7S-QJ8" firstAttribute="leading" secondItem="3ys-q8-rtJ" secondAttribute="leading" id="kyM-g9-lZd"/>
                            <constraint firstItem="wLP-7S-QJ8" firstAttribute="top" secondItem="3ys-q8-rtJ" secondAttribute="top" id="t95-rx-vqK"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="3ys-q8-rtJ"/>
                    </view>
                    <navigationItem key="navigationItem" title="Weather list" id="m37-3z-C8d"/>
                    <connections>
                        <outlet property="activityIndicator" destination="ACq-Ih-m8b" id="SMm-zI-OYZ"/>
                        <outlet property="tableView" destination="wLP-7S-QJ8" id="FMR-lq-LNT"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="9RD-9c-07l" userLabel="First Responder" sceneMemberID="firstResponder"/>
...
